# kinda-might-work

./: .gitignore  kinda-might-work.cabal  stack.yaml
conf/: app.crt  public.json
src/: API.hs  Conf.hs  DB.hs  Main.hs  OAuth.hs  PageTemplate.hs  Profile.hs  Redirect.hs  Server.hs  Synchro.hs  TokenCSFR.hs  WebPage.hs  WithSession.hs
src/Orphan/: UUID.hs
static/: trelloAuth.js
