name:                kinda-might-work
version:             0.1.0.0
synopsis:            Sync trello wunderlist
description:         Please see README.md
homepage:            https://github.com/githubuser/kinda-might-work#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


executable kinda-might-work-exe
  hs-source-dirs:      src
  main-is:             Main.hs

  other-modules:       API
                     , Conf
                     , DB
                     , OAuth
                     , Orphan.UUID
                     , Profile
                     , Server
                     , Synchro
                     , Redirect
                     , TokenCSFR 
                     , WebPage


  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , async
                     , base
                     , base64-bytestring
                     , binary
                     , containers
                     , cookie
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , http-types
                     , lens
                     , lens-aeson
                     , lucid
                     , monad-logger
                     , path-pieces
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , profunctors
                     , protolude
                     , random
                     , resource-pool
                     , resourcet
                     , servant
                     , servant-client
                     , servant-lucid
                     , servant-server
                     , servant-simple-cookie-session
                     , text
                     , time
                     , transformers
                     , url
                     , uuid
                     , wai
                     , wai-extra
                     , warp
                     , warp-tls
                     , wreq

  default-language:    Haskell2010


  default-extensions:  BangPatterns
                     , BinaryLiterals
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveAnyClass
                     , DeriveGeneric
                     , DisambiguateRecordFields
                     , EmptyDataDecls
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , LambdaCase
                     , MonadComprehensions
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , PatternSynonyms
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards
                     , RecursiveDo
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators


source-repository head
  type:     git
  location: https://github.com/githubuser/kinda-might-work
